<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:stretchColumns="*">

    <TableRow android:padding="16dp">
        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_launcher_megaphone"
                   android:layout_gravity="center"
                   android:contentDescription="@string/icon_desc"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/app_name"
                  android:gravity="center"
                  android:layout_gravity="center|left"/>
    </TableRow>

    <TableRow>
        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textSize="10dip"
                  android:textStyle="italic"
                  android:layout_span="2"
                  android:layout_margin="8dip"
                  android:textColor="#666666"
                  android:text="@string/app_description"
                  android:layout_gravity="center"/>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_ok_btn_text"
            android:id="@+id/about_ok_button"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:minWidth="80dp"
            android:layout_span="2"/>
    </TableRow>

</TableLayout>